Remove not needed feature flags (#7887)